updates to the html boilerplate

--- a/index.html
+++ b/index.html
@@ -9,30 +9,32 @@
 </head>
 
 <body>
-  <header>Get Me the Hell Out of Here!</header>
-  <Main>
-    <section>How it Works:<section>
-        <summary>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates possimus blanditiis dicta,
-          laudantium soluta cumque veritatis libero ratione,
-          quae, doloribus adipisci consectetur aspernatur voluptatibus nulla omnis. Delectus illo adipisci possimus!
-        </summary>
-    <div>
-      <label for="user-zip">Enter ZIP code:</label>
-          <input type="text" placeholder="Your ZIP code" id="user-zip" name="user-zip" class="form-input"/>
-      <button type="submit">
-        Click here to go!
-      </button>
-    </div>    
-  </Main>
-  <article>
-    <div>Where you're headed:</div>
-      <div class = "flight-info">
-        <p class = "location">You're headed to sunny <span id= location-name>[city]</span>!</p>
-        <button class= "flight-link">Book my Flight</button>
+  <header>
+    <h1>Get Me the Hell Out of Here!</h1>
+  </header>
+  <main>
+    <section>
+      <h2>How it Works:</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates possimus blanditiis dicta, laudantium
+        soluta cumque veritatis libero ratione,
+        quae, doloribus adipisci consectetur aspernatur voluptatibus nulla omnis. Delectus illo adipisci possimus!</p>
+      <form>
+        <label for="user-zip">Enter ZIP code:</label>
+        <input type="text" placeholder="Your ZIP code" id="user-zip" name="user-zip" />
+        <input type="submit" value="Click here to go!"/>
+      </form>
+    </section>
+    <section>
+      <h2>Where you're headed:</h2>
+      <div class="flight-info">
+        <p class="location">You're headed to sunny <span id=location-name>[city]</span>!</p>
+        <button class="flight-link">Book my Flight</button>
       </div>
-  </article>
+    </section>
+  </main>
+
   <footer>
-  This website was created by:
+    <h3>This website was created by:</h3>
     <ul>
       <li>Sarah Dickinson</li>
       <li>Luke Machalakis</li>
