--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="uk-text-center uk-padding-large uk-margin">
                         <div><span uk-icon="icon: location; ratio: 4"></span></div>
                         <div class="uk-padding-small"><label for="user-zip">Where are you?</label></div>
-                        <div><input class="uk-input uk-form-width-small" type="text" minlength="5" name="user-zip" id="user-zip" name="user-zip" placeholder="Zip code" /></div>
+                        <div><input class="uk-input uk-form-width-small" type="text" minlength="5" name="user-zip" id="user-zip" name="user-zip" placeholder="Zip Code" /></div>
                         <p>It's about to get a whole lot hotter!</p>
                     </div>
 
