--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div><span uk-icon="icon: world; ratio: 4"></span></div>
                         <div class="uk-padding-small"><label for="">Are you ready?</label></div>
                         <div><input type="submit" value="Let's go!" class="uk-input uk-form-width-small uk-button-secondary" /></div>
-                        <p>I hope you packed sunscreen.</p>
+                        <p>I hope you packed your sunscreen!</p>
                     </div>
                 </div>
             </form>
