--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
 
             <div id="go-again" class="uk-text-center uk-padding-large">
-                <a href="#location" uk-totop uk-scroll></a>
+                <button id = "go-again-button" uk-totop></button>
                 <p>Go again?</p>
             </div>
         </section>
@@ -136,6 +136,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.3/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.3/dist/js/uikit-icons.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="./assets/script.js"></script>
 
 </body>
