--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div><span uk-icon="icon: location; ratio: 4"></span></div>
                         <div class="uk-padding-small"><label for="user-zip">Where are you?</label></div>
                         <div><input class="uk-input uk-form-width-small" type="text" minlength="5" name="user-zip" id="user-zip" name="user-zip" placeholder="Zip Code" /></div>
-                        <datalist id = "user-zip">                          
+                        <datalist id="user-zip-list">                          
                         </datalist>
                         <p>It's about to get a whole lot hotter!</p>
                     </div>
