--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav class="uk-navbar-container" uk-navbar>
         <div class="uk-navbar-left">
-            <h1 class="uk-logo uk-margin-medium-left">GTHO</h1>
+            <img src="./assets/img/heat.png" height="40" width="40" class="uk-logo uk-margin-medium-left" uk-svg></img>
         </div>
         <div class="uk-navbar-right uk-margin-medium-right">
             <ul class="uk-navbar-nav">
@@ -88,16 +88,10 @@
             </form>
         </section>
 
-
-
-
-        <!-- loading wheel .uk-hidden, use js to .uk-visable on submit while loading-->
         <section id="spinner" class="uk-text-center uk-padding-large" hidden>
             <div><span uk-spinner="ratio: 4.5"></span></div>
         </section>
 
-
-        <!-- .flight-info .uk-hidden, use js to .uk-visable upon load-->
         <section id="flights" hidden>
             <div class="flight-info uk-column-1-2@l">
                 <img src="./assets/img/photo-1568596312185-2c3e8f8042c3.jpg" alt="">
@@ -110,7 +104,7 @@
             </div>
 
             <div id="go-again" class="uk-text-center uk-padding-large">
-                <button id = "go-again-button" uk-totop></button>
+                <button id="go-again-button" uk-totop></button>
                 <p>Go again?</p>
             </div>
         </section>
