--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                         <h2 class="uk-heading-line uk-text-right uk-margin-small-right"><span>What we do</span></h2>
                         <p>Enter your current location and GTHO will connect you with the next flight out of there. We know you like it hot and this ones gonna be a scorcher!
                         </p>
+                        <div class="down-button uk-text-center uk-padding-large">
+                            <p>What are you waiting for? Get the hell out of here!</p>
+                            <a class="uk-link-muted uk-text-break" href="#location" uk-icon="icon: chevron-down"></a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="uk-text-center uk-padding-large">
-                <a class="uk-link-muted" href="#location" uk-icon="icon: chevron-down">
-                    <p>What are you waiting for? Get the hell out of here!</p>
-                </a>
-            </div>
+
         </section>
 
         <section id="location">
@@ -90,9 +90,13 @@
         </section>
 
         <section id="flights" hidden>
-            <div class="flight-info uk-column-1-2@l">
-                <img src="./assets/img/photo-1568596312185-2c3e8f8042c3.jpg" alt="">
-                <div class="uk-container-center uk-padding-large uk-margin">
+
+            <div class="flight-info uk-flex uk-child-width-1-2@m" uk-grid>
+                <div class="uk-card">
+                    <img src="./assets/img/photo-1568596312185-2c3e8f8042c3.jpg" alt="hot landscape">
+                </div>
+
+                <div class="uk- card uk-container-center uk-padding-large uk-margin">
                     <h2 class="uk-heading-line uk-margin-small-left"><span>Pack your bags</span></h2>
                     <div class="uk-text-center">
                         <p class="location">You're headed to <span id=location-name>[city]</span>!</p>
@@ -100,6 +104,7 @@
                         <button class="flight-link uk-button uk-button-secondary">Book my flight!</button>
                     </div>
                 </div>
+
             </div>
 
             <div id="go-again" class="uk-text-center uk-padding-large">
@@ -123,7 +128,7 @@
     <footer id="credits">
 
         <div class="uk-card uk-background-muted uk-padding">
-            <h3 class="uk-heading-line uk-margin-small-left"><span>Brought to you by</span></h3>
+            <h3 class="uk-heading-line uk-text-right uk-margin-small-left"><span>Brought to you by</span></h3>
 
             <div class="uk-grid-collapse uk-child-width-expand@s uk-text-center" uk-grid>
                 <div class="uk-background-muted uk-small-padding"><a href="https://github.com/flumanuck"><span class="uk-margin-small" uk-icon="icon: user"></span> Jacob Machlis</div>
