--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
             </form>
         </section>
 
+        <section>
+            <div class="uk-text-center uk-padding-large">
+                <hr class="uk-divider-icon">
+                </span>
+            </div>
+        </section>
+
         <section id="spinner" class="uk-text-center uk-padding-large" hidden>
             <div><span uk-spinner="ratio: 4.5"></span></div>
         </section>
